Added og meta tags

--- a/reservetable/public/index.html
+++ b/reservetable/public/index.html
@@ -8,7 +8,12 @@
     <meta
       name="description"
       content="Little Lemon Restaurant"
-    />
+    /> 
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:description" cotnent = "Little Lemon is a charming neighborhood bistro that serves simple food and classic cocktails in a lively but casual 
+    environment. The restaurant features a locally-sourced menu with daily specials."/>
+<meta name="og:image" content="restaurant.jpg"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
